feat: complete line offical animation

--- a/line-page/style.css
+++ b/line-page/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700;900&display=swap");
+
 *,
 *::before,
 *::after {
@@ -8,26 +10,8 @@
 
 body {
   height: 200vh;
+  font-family: "Noto Sans TC", sans-serif;
 }
-/* 
-.first {
-  background: #fff;
-  width: 100vw;
-  height: 100vh;
-  animation-name: fadeOut;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-  }
-} */
 
 .mv {
   position: relative;
@@ -36,43 +20,54 @@ body {
   min-width: 1200px;
 }
 
+.mv::before,
+.mv::after {
+  position: absolute;
+  top: calc(50% - 120px);
+  left: calc(50% - 320px);
+  width: 720px;
+  height: 160px;
+}
+
 .mv::before {
   content: "";
   display: inline-block;
   animation: startBox 5s;
   background: #1cd479;
-  width: 720px;
-  height: 160px;
+  opacity: 0;
+  z-index: 1;
+}
+
+.mv::after {
+  content: "Life on LIFE";
+  color: #fff;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding-right: 30px;
+  padding-bottom: 18px;
+  font-size: 60px;
+  font-family: sans-serif;
   opacity: 0;
   z-index: 2;
+  animation: startBox 5s;
 }
 
-.mv::before {
-  position: absolute;
-  top: calc(50% - 120px);
-  left: calc(50% - 320px);
-}
-
-.mvIn {
-  z-index: 1;
-  display: inline-block;
-  background: #fff;
-  width: 720px;
-  height: 160px;
-  position: absolute;
-  top: calc(50% - 120px);
-  left: calc(50% - 320px);
-  animation: startBackground 2s;
-  transform: scale(0);
-}
-
-@keyframes startBackground {
+@keyframes startText {
   0% {
-    transform: scale(30);
+    opacity: 0;
   }
-
+  8% {
+    opacity: 1;
+  }
+  15% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
   to {
-    transform: scale(0);
+    opacity: 0;
   }
 }
 
@@ -132,12 +127,26 @@ header {
   opacity: 0.95;
   background: #fff;
   box-shadow: 0 1px 0 0 rgb(0 0 0 / 10%);
-  /* animation: startHeader 2.5s; */
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 20px 30px;
   z-index: 1;
+  transform: translate(0px, -75px);
+  animation-name: startHeader;
+  animation-duration: 500ms;
+  animation-delay: 1800ms;
+  animation-fill-mode: forwards;
+  font-weight: 700;
+}
+
+@keyframes startHeader {
+  0% {
+    transform: translate(0px, -75px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
 }
 
 .logo {
@@ -154,15 +163,20 @@ header {
   width: 100vw;
   height: 100vh;
   background-color: #fff;
-  animation: 1s bgOpening ease-out;
+  animation-name: bgOpening;
+  animation-duration: 700ms;
+  animation-delay: 1200ms;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+  clip-path: inset(50% 50% 50% 50%);
 }
 
 @keyframes bgOpening {
   0% {
-    clip-path: circle(0%);
+    clip-path: inset(34% 17% 45% 25%);
   }
   100% {
-    clip-path: circle(100%);
+    clip-path: inset(0 0 0 0);
   }
 }
 
@@ -179,7 +193,7 @@ header {
 }
 
 .scroll .kvList {
-  width: 900px;
+  width: 1200px;
   height: 300px;
 }
 
@@ -217,4 +231,45 @@ header {
     opacity: 0;
     background-size: 120% auto;
   }
+}
+
+.content {
+  height: 100vh;
+  background-color: #ddd;
+}
+
+.navigation {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  align-items: center;
+  gap: 5vw;
+}
+
+.currentLang {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  cursor: pointer;
+}
+
+.currentLang::after {
+  content: "";
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-top: 4px solid black;
+}
+
+.navigation::after {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  width: 94px;
+  height: 4px;
+  background-color: #222;
+}
+
+.navigation li {
+  cursor: pointer;
 }
