--- a/medium/rotate-animation/style.css
+++ b/medium/rotate-animation/style.css
@@ -9,7 +9,7 @@
 body {
   width: 100vw;
   height: 100vh;
-  background-color: #333;
+  background-color: #ddd;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,7 +23,7 @@ main {
   height: 200px;
 }
 
-main img {
+main > img {
   position: absolute;
   width: 100px;
   height: 100px;
@@ -31,29 +31,56 @@ main img {
   border-radius: 50%;
   box-shadow: 0px 0px 0px 3px #fff;
   animation-name: move, scale, rotate;
-  animation-duration: 2.75s, 2.75s, 2.75s;
+  animation-duration: 1.4s, 1.4s, 1.4s;
   animation-iteration-count: infinite, infinite, infinite;
   animation-timing-function: ease-in-out, linear, linear;
   opacity: 0;
 }
 
-main img:nth-of-type(2) {
-  animation-delay: 0.85s;
+main > img:nth-of-type(2) {
+  animation-delay: 0.45s;
 }
 
-main img:nth-of-type(3) {
-  animation-delay: 1.67s;
+main > img:nth-of-type(3) {
+  animation-delay: 0.9s;
+}
+
+.bottom {
+  width: 100%;
+  display: flex;
+  position: absolute;
+  gap: 20px;
+  bottom: 30px;
+}
+
+.bottom img {
+  width: 20px;
+  height: 20px;
+  animation: 1.6s infinite circle ease-in-out;
+}
+
+.text {
+  font-weight: 700;
+}
+
+@keyframes circle {
+  from {
+    transform: rotate(0deg) translateX(5px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(5px) rotate(-360deg);
+  }
 }
 
 @keyframes move {
   0% {
-    left: 100px;
+    left: -70px;
   }
   70% {
-    left: -100px;
+    left: 70px;
   }
   100% {
-    left: 100px;
+    left: -70px;
   }
 }
 
@@ -95,9 +122,9 @@ main img:nth-of-type(3) {
 
 @keyframes rotate {
   0% {
-    background-position: 0px;
+    background-position: 100px;
   }
   100% {
-    background-position: 200px;
+    background-position: 0px;
   }
 }
