--- a/medium/rotate-animation/style.css
+++ b/medium/rotate-animation/style.css
@@ -15,7 +15,7 @@ body {
   align-items: center;
 }
 
-main {
+.matching {
   display: flex;
   gap: 20px;
   position: relative;
@@ -23,13 +23,16 @@ main {
   height: 200px;
 }
 
-main > img {
+.avatar {
   position: absolute;
   width: 100px;
   height: 100px;
   object-fit: cover;
   border-radius: 50%;
   box-shadow: 0px 0px 0px 3px #fff;
+}
+
+.matching > img {
   animation-name: move, scale, rotate;
   animation-duration: 1.4s, 1.4s, 1.4s;
   animation-iteration-count: infinite, infinite, infinite;
@@ -37,11 +40,11 @@ main > img {
   opacity: 0;
 }
 
-main > img:nth-of-type(2) {
+.matching > img:nth-of-type(2) {
   animation-delay: 0.45s;
 }
 
-main > img:nth-of-type(3) {
+.matching > img:nth-of-type(3) {
   animation-delay: 0.9s;
 }
 
@@ -63,12 +66,44 @@ main > img:nth-of-type(3) {
   font-weight: 700;
 }
 
-@keyframes circle {
+.result {
+  display: none;
+}
+
+.result.show {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation: popup 1s;
+}
+
+.result img {
+  position: relative;
+}
+
+.result .firework {
+  position: absolute;
+  z-index: -1;
+}
+
+@keyframes popup {
   from {
-    transform: rotate(0deg) translateX(5px) rotate(0deg);
+    transform: translateY(50px);
+    opacity: 0.4;
   }
   to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes circle {
+  from {
     transform: rotate(360deg) translateX(5px) rotate(-360deg);
+  }
+  to {
+    transform: rotate(0deg) translateX(5px) rotate(0deg);
   }
 }
 
