--- a/frontendmentor/notifications-page-main/style.css
+++ b/frontendmentor/notifications-page-main/style.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap');
 
+:root {
+  --gray-50: hsl(0, 0%, 100%);
+  --gray-100: hsl(210, 60%, 98%);
+  --gray-200: hsl(211, 68%, 94%);
+  --gray-300: hsl(205, 33%, 90%);
+  --gray-400: hsl(219, 14%, 63%);
+  --gray-500: hsl(219, 12%, 42%);
+  --gray-600: hsl(224, 21%, 14%);
+  --red: hsl(1, 90%, 64%);
+  --blue: hsl(219, 85%, 26%);
+}
+
 *,
 *::before,
 *::after {
@@ -8,7 +20,151 @@
   padding: 0;
 }
 
+html,body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   box-sizing: inherit;
   font-family: 'Plus Jakarta Sans', sans-serif;
+  background-color: var(--gray-100);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+
+
+.container {
+  background-color: var(--gray-50);
+  max-width: 41rem;
+  border-radius: 0.6rem;
+  box-shadow: 0px 0px 3rem rgba(0,0,0,0.04);
+  padding: 1.8rem 1.8rem 0rem 1.8rem;
+  overflow: auto;
+}
+
+.heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.heading-title {
+  font-size: 1.5rem;
+  font-weight: 800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:0.5rem;
+}
+
+.heading-badge {
+  display: inline-block;
+  background-color: var(--blue);
+  color: var(--gray-50);
+  font-size:0.8rem;
+  padding: 0.2rem 0.65rem;
+  border-radius: 0.3rem;
+}
+
+.heading-marked {
+  font-size: 0.9rem;
+  background-color: transparent;
+  color: var(--gray-400);
+  margin-bottom: -0.5rem;
+  margin-right: -0.5rem;
+  padding: 0.1rem 0.5rem;
+  cursor: pointer;
+  border: 2px dashed transparent;
+}
+
+.heading-marked:focus {
+  border: 2px dashed var(--red);
+}
+
+.card {
+  margin-bottom: 0.5rem;
+  border-radius: 0.4rem;
+  padding: 0.6rem;
+  font-size: 0.9em;
+  line-height: 1.5;
+}
+
+.card.card-unread {
+  background-color:var(--gray-100);
+}
+
+.card.card-unread .card-description::after {
+  content: '●';
+  display: inline-block;
+  font-size: 0.2rem;
+  color: var(--red);
+  margin-left: 0.3rem;
+  transform: scale(0.8);
+}
+
+.card-heading{
+  display: flex;
+  padding: 0.4rem;
+}
+
+.card-content {
+  flex:1;
+  color: var(--gray-500);
+}
+
+.card-img {
+  margin-right: 1rem;;
+}
+
+.card-name {
+  display: inline-block;
+  font-size: 0.92em;
+  color: var(--gray-600);
+  margin-right: 0.2rem;
+}
+
+.card-reacted {
+  color: var(--gray-500);
+  font-weight: 800;
+  margin-left: 0.4rem;
+}
+
+.card-group {
+  margin-left:0.4rem;
+  color: var(--blue);
+  font-weight: 800;
+  text-decoration: none;
+}
+
+.card-message {
+  border: 1px solid var(--gray-300);
+  color: var(--gray-500);
+  padding: 1rem;
+  border-radius: 0.2rem;
+  width: 88%;
+  margin-left: auto;
+  margin-right:0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.card-post {
+  color: var(--gray-500);
+  font-weight: 800;
+  text-decoration: none;
+  margin-left: 0.2rem;
+}
+
+.card-time {
+  font-weight: 500;
+  font-size: 0.9rem;
+  color: var(--gray-400);
+}
+
+.card-picture {
+  float: right;
+}
+
