[notification-page] done

--- a/frontendmentor/notifications-page-main/style.css
+++ b/frontendmentor/notifications-page-main/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap");
 
 :root {
   --gray-50: hsl(0, 0%, 100%);
@@ -20,14 +20,15 @@
   padding: 0;
 }
 
-html,body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
 
 body {
   box-sizing: inherit;
-  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   background-color: var(--gray-100);
   display: flex;
   justify-content: center;
@@ -35,14 +36,14 @@ body {
   flex-direction: column;
 }
 
-
 .container {
   background-color: var(--gray-50);
   max-width: 41rem;
   border-radius: 0.6rem;
-  box-shadow: 0px 0px 3rem rgba(0,0,0,0.04);
+  box-shadow: 0px 0px 3rem rgba(0, 0, 0, 0.04);
   padding: 1.8rem 1.8rem 0rem 1.8rem;
   overflow: auto;
+  max-height: 50rem;
 }
 
 .heading {
@@ -58,14 +59,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap:0.5rem;
+  gap: 0.5rem;
 }
 
 .heading-badge {
   display: inline-block;
   background-color: var(--blue);
   color: var(--gray-50);
-  font-size:0.8rem;
+  font-size: 0.8rem;
   padding: 0.2rem 0.65rem;
   border-radius: 0.3rem;
 }
@@ -91,33 +92,36 @@ body {
   padding: 0.6rem;
   font-size: 0.9em;
   line-height: 1.5;
+  transition: 200ms;
 }
 
 .card.card-unread {
-  background-color:var(--gray-100);
+  background-color: var(--gray-100);
 }
 
 .card.card-unread .card-description::after {
-  content: '●';
+  content: "●";
   display: inline-block;
   font-size: 0.2rem;
   color: var(--red);
   margin-left: 0.3rem;
   transform: scale(0.8);
+  transition: 200ms;
 }
 
-.card-heading{
+.card-heading {
   display: flex;
   padding: 0.4rem;
 }
 
 .card-content {
-  flex:1;
+  flex: 1;
   color: var(--gray-500);
 }
 
 .card-img {
-  margin-right: 1rem;;
+  margin-right: 1rem;
+  width: 40px;
 }
 
 .card-name {
@@ -134,7 +138,7 @@ body {
 }
 
 .card-group {
-  margin-left:0.4rem;
+  margin-left: 0.4rem;
   color: var(--blue);
   font-weight: 800;
   text-decoration: none;
@@ -147,7 +151,7 @@ body {
   border-radius: 0.2rem;
   width: 88%;
   margin-left: auto;
-  margin-right:0.5rem;
+  margin-right: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -166,5 +170,26 @@ body {
 
 .card-picture {
   float: right;
+  width: 40px;
+  object-fit: cover;
+  height: 40px;
+  border-radius: 0.2rem;
 }
 
+@media (max-width: 476px) {
+  body {
+    background-color: var(--gray-50);
+  }
+  .container {
+    max-height: 100%;
+    padding: 1.5rem;
+  }
+
+  .card-message {
+    padding-right: 1.2rem;
+  }
+
+  .card-message {
+    width: 80%;
+  }
+}
