--- a/medium/Beatmaker/style.css
+++ b/medium/Beatmaker/style.css
@@ -10,4 +10,10 @@ body {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+i,
+svg {
+  pointer-events: none;
 }
